Fixed css and html to help with alignment

--- a/src/style.css
+++ b/src/style.css
@@ -1,57 +1,65 @@
-.app {
-  margin: 60px auto;
-  max-width: 800px;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.weather {
-  background: #fff;
-  border-radius: 16px;
-  box-shadow: 0 30px 50px rgb(65 50 100 / 8%);
+h1 {
   color: #878787;
-  font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
-  padding: 40px;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 0;
 }
 
-.weather form {
-  border-bottom: 1px solid #f9f7fe;
-  margin-top: 40px;
-  padding-bottom: 30px;
-}
-.weather-info {
-  margin-top: 20px;
-}
-.weather h1 {
-  color: #272142;
-  font-size: 38px;
-  font-weight: 700;
-  line-height: 48px;
-  margin: 20px 0 10px;
-}
 ul {
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
 }
-.weather li {
-  color: rgba(39, 33, 66, 0.4);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 20px;
+
+li {
   list-style: none;
-  margin-bottom: 5px;
+  margin: 0;
+  padding: 0;
+
+  color: rgb(135, 135, 135);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 20px;
 }
 
-.weather .temperature {
-  color: #212121;
-  font-size: 80px;
-  font-weight: 700;
+li:first-letter {
+  text-transform: capitalize;
+}
+
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+
+.overview {
+  margin-bottom: 20px;
+}
+
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
   line-height: 1;
-  margin-left: 10px;
-}
-
-.weather .unit {
-  color: #212121;
-  font-size: 28px;
   font-weight: 400;
-  line-height: 1;
+}
+
+.units {
   position: relative;
+  font-size: 16px;
   top: -34px;
 }
